# Veigo-Chat

./: LICENSE.md  Makefile  README.md  README2.md
backend/authentication/: .env  .mocharc.json  Dockerfile  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/authentication/alembic/versions/: 04132ab81501_.py  bbd7e8a7730c_.py  cfce68127e75_create_accounts_and_devices_tables.py  db45d3d28c91_.py
backend/authentication/scripts/: Protocol Buffers Builder.sh  is_healthy.sh  pre-commit-format.sh
backend/authentication/scripts/db/: alembic_helper.sh  downgrade.sh
backend/authentication/source/: index.ts  main.py
backend/authentication/source/configurations/: Environments.ts
backend/authentication/source/exceptions/: db.py
backend/authentication/source/infrastructure/: application.py
backend/authentication/source/models/: account.py  device.py  information.py
backend/authentication/source/routers/: devices.py  login.py
backend/authentication/source/schemas/: account.py  device.py  login.py
backend/authentication/source/services/: account.py  device.py
backend/authentication/source/types/: Promisify.ts  nodejs.d.ts
backend/authentication/source/utilities/: decorators.py  security.py
backend/authentication/tests/e2e/: HealthCheck.test.ts  Login.test.ts
backend/authentication/tests/factories/: Account.factory.ts  Device.factory.ts  GRPC.factory.ts
backend/authentication/tests/hooks/: Database.hooks.ts
backend/chat/: Cargo.toml  package-lock.json  package.json  tsconfig.json
backend/chat/scripts/: Protocol Buffers Builder.sh
backend/chat/source/: index.ts  main.rs
(+469 files in other folders)
